--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
   --main-color:#ea339e;
+  --main-secondary-color:#f976c3;
   --secondary-color:#1F0011;
   --main-text-color:#171616;
   --main-white-color:#f0e9e9;
@@ -7,10 +8,11 @@
 body {
   color: #171616;
   display: block;
+  justify-content: center;
   font-family: 'Poppins', sans-serif;
 }
 
-b-nav {
+.b-nav {
   position: absolute;
   top: 0;
   left: 50%; 
@@ -22,12 +24,12 @@ b-nav {
   border-radius: 12px;
 }
 
-b-nav b-nav-item {
+.b-nav .b-nav-item {
   list-style: none;
   margin: 0 12px;
 }
 
-b-nav b-nav-item a {
+.b-nav .b-nav-item a {
   position: relative;
   color: #333;
   font-size: 20px;
@@ -36,46 +38,127 @@ b-nav b-nav-item a {
   text-decoration: none;
 }
 
-b-nav b-nav-item a:before {
+.b-nav .b-nav-item a:before {
   content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   height: 3px;
   width: 0%;
-  background: #ea339e; /* My main color */
+  background: var(--main-color); /* My main color */
   border-radius: 12px;
   transition: all 0.4s ease;
 }
 
-b-nav b-nav-item a:hover:before {
+.b-nav .b-nav-item a:hover:before {
   width: 100%;
 }
 
-b-nav b-nav-item.center a:before {
+.b-nav .b-nav-item.center a:before {
   left: 50%;
   transform: translateX(-50%);
 }
 
-b-nav b-nav-item.upward a:before {
+.b-nav .b-nav-item.upward a:before {
   width: 100%;
   bottom: -5px;
   opacity: 0;
 }
 
-b-nav b-nav-item.upward a:hover:before {
+.b-nav .b-nav-item.upward a:hover:before {
   bottom: 0px;
   opacity: 1;
 }
 
-b-nav b-nav-item.forward a:before {
+.b-nav .b-nav-item.forward a:before {
   width: 100%;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 0.4s ease;
 }
 
-b-nav b-nav-item.forward a:hover:before {
+.b-nav .b-nav-item.forward a:hover:before {
   transform: scaleX(1);
   transform-origin: left;
 }
+.text-box{
+  margin: auto;
+  padding: 20px;
+  display: block;
+  background: var(--main-white-color);
+}
+.text {
+  color: var(--main-text-color);
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+} 
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
