--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,11 @@
+/*
+REMINDER:
+Use % for font sizes
+Use px for images
+Use px, %, or em for box sizes
+Use ratios for line height
+
+*/
 :root {
   --main-color:#ea339e;
   --main-secondary-color:#f976c3;
@@ -81,13 +89,14 @@ body {
   transform: scaleX(1);
   transform-origin: left;
 }
-.text-box{
+.text-box {
   margin: auto;
   padding: 20px;
   display: block;
   background: var(--main-white-color);
 }
 .text {
+  text-wrap: balance;
   color: var(--main-text-color);
   font-size: 1.2rem;
   font-weight: 400;
@@ -100,8 +109,62 @@ body {
   display: table;
 }
 
+.about-image{
+  height: 25%;
+  width: 25%;
+  border-radius: 100px;
+  
+}
+.icons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+.iconIG{
+  height: 50px;
+  width: 50px;
+  background-color: #d76baa;
+  border-radius: 25px;
+  margin: 20px;
+}
+.iconLI{
+  height: 50px;
+  width: 50px;
+  background-color: #2d89e6;
+  border-radius: 25px;
+  margin: 20px;
+}
+.iconGH{
+  height: 50px;
+  width: 50px;
+  background-color: #6a6a6a;
+  border-radius: 25px;
+  margin: 20px;
+}
+.iconTW{
+  height: 50px;
+  width: 50px;
+  background-color: #4ab8fd;
+  border-radius: 25px;
+  margin: 20px;
+}
+.iconET{
+  height: 50px;
+  width: 50px;
+  background-color: #f2924e;
+  border-radius: 25px;
+  margin: 20px;
+}
+.iconTT{
+  height: 50px;
+  width: 50px;
+  background-color: #7063eb;
+  border-radius: 25px;
+  margin: 20px;
+}
 
-
+/* MEDIA QUERIES */
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .col-1 {width: 8.33%;}
@@ -150,15 +213,3 @@ body {
   .col-12 {width: 100%;}
 } 
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
